mostly factored out into region/search

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "maximize an n-dimensional landscape using the battleship search algorithm",
   "main": "index.js",
   "dependencies": {
+    "gray-code": "0.0.0",
     "inherits": "~2.0.0"
   },
   "devDependencies": {
