--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "maximize an n-dimensional landscape using the battleship search algorithm",
   "main": "index.js",
   "dependencies": {
+    "circumcenter": "0.0.0",
     "gray-code": "~0.0.0",
-    "is-triangle": "~0.0.0",
-    "inherits": "~2.0.0"
+    "inherits": "~2.0.0",
+    "is-triangle": "~0.0.0"
   },
   "devDependencies": {
     "tape": "~1.0.4"
